# logvar_diffusion

./: .gitignore  README.md  ablation_study.py  out.txt  pyproject.toml  theory.md  toy_example_new.py  toy_example_old.py  training.py
src/: gaussian_mixture.py  toy_model.py
