[project]
name = "logvar-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "torch>=2.7",
    "awscli",
    "setuptools",
    "einops",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "moviepy",
    "scipy",
    "click",
    "tqdm",
]
